# neb

./: .gitignore  README.md  pyproject.toml
neb/: cli.py  epub.py  language.py  player.py  sanitize.py  tts.py
neb/templates/: player.html
neb/text/: __init__.py  common.py  english.py  german.py  io.py
ptts/: epub.py  player.py  tts.py
ptts/templates/: player.html
tests/: test_cli.py  test_epub.py  test_german.py  test_language.py  test_merge.py  test_player.py  test_sanitize.py  test_text.py  test_tts.py  test_tts_integration.py
