[project]
name = "neb"
version = "0.1.0"
description = "Narrate English Books — EPUB to audiobook pipeline"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
  "beautifulsoup4>=4.12",
  "ebooklib>=0.18",
  "fastapi>=0.110",
  "jinja2>=3.1",
  "lxml>=5.0",
  "pocket-tts",
  "python-multipart>=0.0.9",
  "pytest>=7.4",
  "rich>=13.7",
  "torch==2.9.1+cpu; sys_platform != 'darwin'",
  "torch; sys_platform == 'darwin'",
  "uvicorn>=0.27",
]

[project.scripts]
neb = "neb.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["neb"]

[tool.uv]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform != 'darwin'" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
